--- a/src/server/chart.fxml
+++ b/src/server/chart.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="740.0" stylesheets="@Style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="740.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="server.ChartController">
    <children>
       <BarChart fx:id="barChart" layoutX="271.0" layoutY="54.0" prefHeight="373.0" prefWidth="427.0">
         <xAxis>
@@ -17,7 +16,7 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </BarChart>
-      <Button fx:id="startBtn" layoutX="86.0" layoutY="155.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="143.0" text="Start" />
+      <Button fx:id="startBtn" layoutX="86.0" layoutY="155.0" mnemonicParsing="false" onAction="#toggleServer" prefHeight="68.0" prefWidth="143.0" text="Start" />
       <Button fx:id="stopBtn" layoutX="86.0" layoutY="304.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="143.0" text="Stop" />
    </children>
 </AnchorPane>
