--- a/src/Screens/ServerMainPage.fxml
+++ b/src/Screens/ServerMainPage.fxml
@@ -12,58 +12,63 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseMoved="#mouseEntered" prefHeight="480.0" prefWidth="740.0" style="-fx-background-color: #FDE8ED;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ServerMainPageController">
+
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="740.0" style="-fx-background-color: #FDE8ED;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
    <children>
-      <Button fx:id="startBtn" layoutX="57.0" layoutY="213.0" mnemonicParsing="false" onAction="#startServer" prefHeight="61.0" prefWidth="198.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="     Activate">
+      <Button fx:id="startBtn" layoutX="67.0" layoutY="223.0" mnemonicParsing="false" onAction="#startServer" prefHeight="61.0" prefWidth="198.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="     Activate">
          <font>
             <Font name="Comic Sans MS Bold" size="24.0" />
          </font>
       </Button>
-      <AnchorPane layoutX="295.0" layoutY="7.0" prefHeight="649.0" prefWidth="792.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="295.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="serverStateImage" fitHeight="61.0" fitWidth="50.0" layoutX="75.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/launch.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="startBtn1" layoutX="67.0" layoutY="367.0" mnemonicParsing="false" onAction="#shutDown" prefHeight="61.0" prefWidth="198.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="    Deactivate">
+         <font>
+            <Font name="Comic Sans MS Bold" size="24.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="47.0" fitWidth="38.0" layoutX="75.0" layoutY="379.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/shutdown.png" />
+         </image>
+      </ImageView>
+      <GridPane alignment="CENTER" layoutX="284.0" layoutY="63.0">
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <columnConstraints>
+            <ColumnConstraints />
+         </columnConstraints>
          <children>
-            <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <columnConstraints>
-                  <ColumnConstraints />
-               </columnConstraints>
-               <children>
-                  <BarChart fx:id="barChart" prefHeight="354.0" prefWidth="425.0" title="Online/Offline Players">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </BarChart>
-               </children>
-            </GridPane>
+            <BarChart fx:id="barChart" prefHeight="354.0" prefWidth="425.0" title="Online/Offline Players">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
+            <BarChart fx:id="barChart" prefHeight="404.0" prefWidth="425.0" title="Online/Offline Players">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
          </children>
-      </AnchorPane>
-      <ImageView fx:id="serverStateImage" fitHeight="61.0" fitWidth="50.0" layoutX="65.0" layoutY="219.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../resources/launch.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="startBtn1" layoutX="57.0" layoutY="357.0" mnemonicParsing="false" onAction="#shutDown" prefHeight="61.0" prefWidth="198.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="    Deactivate">
-         <font>
-            <Font name="Comic Sans MS Bold" size="24.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="47.0" fitWidth="38.0" layoutX="65.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../resources/shutdown.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="startChart" layoutY="14.0" mnemonicParsing="false" onAction="#StartChart" prefHeight="90.0" prefWidth="93.0" style="-fx-background-color: #FDE8ED;">
+      </GridPane>
+      <Button fx:id="startChart" layoutX="-5.0" layoutY="11.0" mnemonicParsing="false" onAction="#StartChart" prefHeight="90.0" prefWidth="93.0" style="-fx-background-color: #FDE8ED;">
          <font>
             <Font name="Comic Sans MS Bold" size="24.0" />
          </font>
          <graphic>
             <ImageView fx:id="img" fitHeight="64.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../resources/refresh-arrow.png" />
+                  <Image url="@../assets/refresh-arrow.png" />
                </image>
             </ImageView>
          </graphic>
