--- a/src/Screens/ServerMainPage.fxml
+++ b/src/Screens/ServerMainPage.fxml
@@ -14,10 +14,17 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseMoved="#mouseEntered" prefHeight="480.0" prefWidth="740.0" style="-fx-background-color: #FDE8ED;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ServerMainPageController">
    <children>
-      <Button fx:id="startBtn" layoutX="57.0" layoutY="213.0" mnemonicParsing="false" onAction="#startServer" prefHeight="61.0" prefWidth="198.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="     Activate">
+      <Button fx:id="startBtn" layoutX="57.0" layoutY="213.0" mnemonicParsing="false" onAction="#startServer" prefHeight="66.0" prefWidth="205.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="Activate">
          <font>
             <Font name="Comic Sans MS Bold" size="24.0" />
          </font>
+         <graphic>
+            <ImageView fx:id="serverStateImage" fitHeight="61.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/launch.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
       <AnchorPane layoutX="295.0" layoutY="7.0" prefHeight="649.0" prefWidth="792.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="295.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -41,29 +48,26 @@
             </GridPane>
          </children>
       </AnchorPane>
-      <ImageView fx:id="serverStateImage" fitHeight="61.0" fitWidth="50.0" layoutX="65.0" layoutY="219.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../resources/launch.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="startBtn1" layoutX="57.0" layoutY="357.0" mnemonicParsing="false" onAction="#shutDown" prefHeight="61.0" prefWidth="198.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="    Deactivate">
+      <Button fx:id="startBtn1" layoutX="57.0" layoutY="336.0" mnemonicParsing="false" onAction="#shutDown" prefHeight="66.0" prefWidth="205.0" style="-fx-background-color: #F9D459; -fx-background-radius: 20;" text="Deactivate">
          <font>
             <Font name="Comic Sans MS Bold" size="24.0" />
          </font>
+         <graphic>
+            <ImageView fitHeight="47.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/shutdown.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
-      <ImageView fitHeight="47.0" fitWidth="38.0" layoutX="65.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../resources/shutdown.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="startChart" layoutY="14.0" mnemonicParsing="false" onAction="#StartChart" prefHeight="90.0" prefWidth="93.0" style="-fx-background-color: #FDE8ED;">
+      <Button fx:id="startChart" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#StartChart" prefHeight="90.0" prefWidth="93.0" style="-fx-background-color: #FDE8ED;">
          <font>
             <Font name="Comic Sans MS Bold" size="24.0" />
          </font>
          <graphic>
             <ImageView fx:id="img" fitHeight="64.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../resources/refresh-arrow.png" />
+                  <Image url="@../assets/refresh-arrow.png" />
                </image>
             </ImageView>
          </graphic>
